spectec/test/elab/neg/type-latex-outside-notation.spectec
;; A %latex literal appears in regular expression position rather
;; than inside a notation declaration.

dec $f : nat
def $f = %latex("hello")
